# asteroids_c

./: .clang-format  CMakeLists.txt  README.md
src/: main.c  vec.c  vec.h
